Started to mess around with celery.
A task starts upon auction start that ends at the auction deadline.

--- a/templates/consignment_portal.html
+++ b/templates/consignment_portal.html
@@ -19,15 +19,19 @@
                 <div class="col-sm-4 my-4">
                     {% if request.user.is_authenticated and request.user.user_type == 2 or request.user.user_type == 3 %}
                         <h1>Submit Alter</h1>
-                        <form name="test" action="#" method="POST" class="w3-light-grey p-3 w3-border w3-card">
+                        <form name="test" action="{% url 'consignment_action' %}" method="POST" class="w3-light-grey p-3 w3-border w3-card">
+                            {% csrf_token %}
                             <label class="my-2">Alter Name</label>
-                            <input required class="w3-input w3-border" type="text" name="firstname" size="20"/>
+                            <input required class="w3-input w3-border" type="text" name="altername" size="20"/>
                             <label class="my-2">Alter Description</label>
-                            <input required class="w3-input w3-border" type="text" name="lastname" size="20"/>
+                            <input required class="w3-input w3-border" type="text" name="alterdesc" size="20"/>
                             <label class="my-2">Alter Price</label>
-                            <input required class="w3-input w3-border" type="text" name="username" size="20"/>
+                            <input required class="w3-input w3-border" type="text" name="alterprice" size="20"/>
                             <label class="my-2">Card Name</label>
-                            <input required class="w3-input w3-border" type="text" name="password" size="20"/>
+                            <input required class="w3-input w3-border" type="text" name="cardname" size="20"/>
+                            <label class="my-2">Deadline</label>
+                            <input required class="w3-input w3-border" type="datetime-local" name="alterdeadline" size="20"/>
+                            <!-- [label ] -->
                             <br>
                             <br>
                             <input class="w3-button w3-border w3-hover-white" type="submit" value="Submit"/>
