--- a/templates/pending_alters.html
+++ b/templates/pending_alters.html
@@ -10,11 +10,11 @@
                 <div class="col-sm-4 offset-sm-4 my-4">
                     <h1>Alters Pending Approval</h1>
                     {% for alter in results %}
-                        <p>{{ alter.name }}</p>
+                        <p>{{ alter.name }} consigned by {{ alter.consigner.name }}</p>
                         <form name="accept-form" action="{% url 'accept_pending_alter' %}" method="POST">
                             {% csrf_token %}
                             <input name="aid" type="hidden" value="{{ alter.pk }}"><br>
-                            <input class="w3-button w3-border w3-hover-white" type="submit" value="Accept"/>
+                            <input type="submit" value="Accept"/>
                         </form>
                         <br>
                     {% endfor %}
