--- a/templates/consignment_portal.html
+++ b/templates/consignment_portal.html
@@ -36,7 +36,8 @@
                             <!-- [label ] -->
 
                             <label class="my-2">Picture</label>
-                            <input required class="w3-input w3-border" type="file" name="alterimage" multiple/>
+                            <br>
+                            <input required type="file" name="alterimage" multiple/>
                             <br>
                             <br>
                             <input class="w3-button w3-border w3-hover-white" type="submit" value="Submit"/>
